Fix user info appearance on mobile
-User info was either too wide or too narrow in mobile view.
-Fix appearance of user info.

--- a/src/components/car_list.css
+++ b/src/components/car_list.css
@@ -7,7 +7,7 @@
     display: grid;
     grid-auto-flow: row;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-gap: 10px;
+    grid-gap: 30px;
 }
 .new-car-button{
     margin: 20px;
