--- a/src/components/user_info.css
+++ b/src/components/user_info.css
@@ -1,3 +1,4 @@
 .user-form{
     min-width: 40%;
+    max-width: 60%;
 }
